# EFF-IPC

./: CMakeLists.txt  README.md
demo/linux_service/client/: main.cpp
demo/linux_service/service/: main.cpp
demo/msg_que/: main.cpp
demo/send_recv/: main.cpp
include/libipc/: buffer.h  condition.h  def.h  export.h  ipc.h  mutex.h  pool_alloc.h  rw_lock.h  semaphore.h  shm.h
src/: CMakeLists.txt
src/libipc/: prod_cons.h
src/libipc/circ/: elem_array.h  elem_def.h
src/libipc/memory/: alloc.h  allocator_wrapper.h  resource.h  wrapper.h
src/libipc/platform/: platform.c  platform.cpp
src/libipc/sync/: condition.cpp  mutex.cpp  semaphore.cpp  waiter.cpp
src/libipc/utility/: scope_guard.h
test/: CMakeLists.txt  test_sync.cpp
